--- a/jenkins/dockerfiles/dockerfile
+++ b/jenkins/dockerfiles/dockerfile
@@ -1,11 +1,9 @@
-FROM openjdk:8-jdk
+FROM docker.io/openjdk:8-jdk
 
 RUN apt-get update -y && apt-get install -y curl sudo
 
-RUN apt-get -y install pip3
-
 #Install docker
-RUN apt-get -y install podman
+RUN curl -sSL https://get.docker.com/ | sh
 
 ARG user=jenkins
 ARG group=jenkins
@@ -15,7 +13,7 @@ ARG gid=10000
 ENV HOME /home/${user}
 RUN groupadd -g ${gid} ${group}
 RUN useradd -c "Jenkins user" -d $HOME -u ${uid} -g ${gid} -m ${user}
-RUN usermod -aG podman ${user}
+RUN usermod -aG docker ${user}
 RUN usermod -aG sudo ${user}
 
 ARG VERSION=3.20
@@ -26,11 +24,8 @@ RUN curl --create-dirs -sSLo /usr/share/jenkins/slave.jar https://repo.jenkins-c
   && chmod 644 /usr/share/jenkins/slave.jar
 
 #docker compose cli
-
-RUN pip3 install podman-compose --user
-
-RUN curl -o /usr/local/bin/podman-compose https://raw.githubusercontent.com/containers/podman-compose/devel/podman_compose.py \
-    && chmod +x /usr/local/bin/podman-compose
+RUN curl -L https://github.com/docker/compose/releases/download/1.23.2/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose \
+    && chmod +x /usr/local/bin/docker-compose
     
 COPY jenkins-slave /usr/local/bin/jenkins-slave
 RUN chmod 777 /usr/local/bin/jenkins-slave
